Modernize codebase
Use following constructs:
- Optional.orElseThrow()
- BindingMap.of()
- List.of()

Change-Id: Ie0753166443bdf85e7437e7911a8d3f91afc0efe
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>