@@ -16,7 +16,6 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.opendaylight.mdsal.common.api.LogicalDatastoreType;
@@ -38,6 +37,7 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.multipart.types.rev170112.M
 import org.opendaylight.yang.gen.v1.urn.opendaylight.multipart.types.rev170112.MultipartReplyBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.multipart.types.rev170112.MultipartRequest;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.openflow.common.types.rev130731.MultipartType;
+import org.opendaylight.yangtools.yang.binding.util.BindingMap;
 import org.opendaylight.yangtools.yang.common.Uint32;
 import org.opendaylight.yangtools.yang.common.Uint64;
 
@@ -83,11 +83,11 @@ public class MeterDirectStatisticsServiceTest extends AbstractDirectStatisticsSe
 
         final MultipartReply reply = new MultipartReplyBuilder()
                 .setMultipartReplyBody(new MultipartReplyMeterStatsBuilder()
-                        .setMeterStats(Collections.singletonMap(meterStat.key(), meterStat))
+                        .setMeterStats(BindingMap.of(meterStat))
                         .build())
                 .build();
 
-        final List<MultipartReply> input = Collections.singletonList(reply);
+        final List<MultipartReply> input = List.of(reply);
 
         final GetMeterStatisticsOutput output = service.buildReply(input, true);
         assertTrue(output.nonnullMeterStats().size() > 0);
@@ -106,11 +106,11 @@ public class MeterDirectStatisticsServiceTest extends AbstractDirectStatisticsSe
 
         final Map<MeterStatsKey, org.opendaylight.yang.gen.v1.urn
                 .opendaylight.meter.types.rev130918.meter.statistics.reply.MeterStats>
-                stats = Collections.singletonMap(stat.key(), stat);
+                stats = BindingMap.of(stat);
         final GetMeterStatisticsOutput output = mock(GetMeterStatisticsOutput.class);
         when(output.nonnullMeterStats()).thenReturn(stats);
 
-        multipartWriterProvider.lookup(MultipartType.OFPMPMETER).get().write(output, true);
+        multipartWriterProvider.lookup(MultipartType.OFPMPMETER).orElseThrow().write(output, true);
         verify(deviceContext).writeToTransactionWithParentsSlow(eq(LogicalDatastoreType.OPERATIONAL), any(), any());
     }
 }
